Add mnemonics expression edit feature
